--- a/home-page/html/about.html
+++ b/home-page/html/about.html
@@ -9,6 +9,8 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <!-- Bootstrap Icons -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Shared CSS -->
     <link href="../css/styles.css" rel="stylesheet">
@@ -26,7 +28,7 @@
         }
 
         .about-hero h1 {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Montserrat', sans-serif;
             font-size: 3rem;
             color: var(--gold);
         }
@@ -38,7 +40,7 @@
         }
 
         .section-title {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Montserrat', sans-serif;
             color: var(--dark-green);
             font-size: 2.5rem;
             font-weight: 700;
@@ -80,7 +82,7 @@
         }
 
         .team-member h5 {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Montserrat', sans-serif;
             color: var(--dark-green);
             font-size: 1.4rem;
             margin-bottom: 0.5rem;
@@ -145,29 +147,31 @@
     </style>
 </head>
 <body>
-    <!-- Navigation -->
+    <!-- Thanh Điều Hướng -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="home.html">FoodHub</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand d-flex align-items-center gap-2" href="home.html">
+                <i class="fa fa-utensils"></i>
+                <span>FoodHub</span> </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="home.html">Home</a>
+                        <a class="nav-link active" href="home.html">Trang Chủ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="menu.html">Menu</a>
+                        <a class="nav-link" href="menu.html">Thực Đơn</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="about.html">About</a>
+                        <a class="nav-link" href="about.html">Giới Thiệu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="contact.html">Liên Hệ</a>
                     </li>
                     <li class="nav-item" id="auth-nav-item">
-                        <a class="nav-link btn-login" href="login.html">Login</a>
+                        <a class="nav-link btn-login" href="login.html">Đăng Nhập</a>
                     </li>
                     <li class="nav-item d-none" id="user-nav-item">
                         <div class="user-dropdown dropdown">
@@ -175,9 +179,9 @@
                                 <span id="username-display"></span>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end">
-                                <li><a class="dropdown-item" href="#">Chỉnh sửa thông tin</a></li>
-                                <li><a class="dropdown-item" href="#">Xem đơn hàng</a></li>
-                                <li><a class="dropdown-item" href="#" onclick="logout()">Đăng xuất</a></li>
+                                <li><a class="dropdown-item" href="profile.html#profile">Chỉnh Sửa Thông Tin</a></li>
+                                <li><a class="dropdown-item" href="">Xem Đơn Hàng</a></li>
+                                <li><a class="dropdown-item" href="#" onclick="logout()">Đăng Xuất</a></li>
                             </ul>
                         </div>
                     </li>
@@ -190,83 +194,90 @@
                 </ul>
             </div>
         </div>
-    </nav>
+        </nav>
 
-    <!-- Hero Section -->
+    <!-- Phần Giới Thiệu -->
     <section class="about-hero">
         <div class="container">
-            <h1>About FoodHub</h1>
-            <p>Discover our story and passion for culinary excellence.</p>
-            <p id="welcome-message" class="welcome-message d-none">Hello, <span id="username-greeting"></span>!</p>
+            <h1>Giới thiệu về FoodHub</h1>
+            <p>Khám phá câu chuyện và niềm đam mê ẩm thực của chúng tôi.</p>
+            
         </div>
     </section>
 
-    <!-- About Section -->
+    <!-- Câu Chuyện Của Chúng Tôi -->
     <section class="about-section">
         <div class="container">
-            <h2 class="section-title">Our Story</h2>
+            <h2 class="section-title">Câu Chuyện Của Chúng Tôi</h2>
             <div class="about-content">
-                <p>FoodHub was founded with a simple mission: to bring people together through the joy of food. Established in 2020, we have grown from a small local eatery to a beloved dining destination, known for our commitment to quality, sustainability, and exceptional service.</p>
-                <p>Our chefs craft each dish with the freshest ingredients, sourced from local farmers and artisans. We believe that every meal tells a story, and we’re dedicated to creating memorable experiences for our guests.</p>
+                <p>FoodHub được thành lập với một sứ mệnh đơn giản: kết nối mọi người qua niềm vui ẩm thực. Được thành
+                    lập từ năm 2020, chúng tôi đã phát triển từ một quán ăn nhỏ thành một địa điểm ẩm thực được yêu
+                    thích, nổi tiếng với cam kết về chất lượng, sự bền vững và dịch vụ xuất sắc.</p>
+                <p>Các đầu bếp của chúng tôi chế biến từng món ăn với nguyên liệu tươi ngon nhất, được chọn lọc từ các
+                    nông trại và nhà cung cấp địa phương. Chúng tôi tin rằng mỗi bữa ăn là một câu chuyện, và chúng tôi
+                    luôn cố gắng tạo ra những trải nghiệm đáng nhớ cho thực khách.</p>
             </div>
         </div>
     </section>
 
-    <!-- Team Section -->
+    <!-- Đội Ngũ Của Chúng Tôi -->
     <section class="about-section">
         <div class="container">
-            <h2 class="section-title">Meet Our Team</h2>
+            <h2 class="section-title">Gặp Gỡ Đội Ngũ</h2>
             <div class="row g-4">
                 <div class="col-md-4">
                     <div class="team-member">
-                        <img src="https://via.placeholder.com/150" alt="Team Member">
+                        <img src="https://via.placeholder.com/150" alt="Thành viên đội ngũ">
                         <h5>Nguyễn Văn A</h5>
-                        <p>Head Chef</p>
-                        <p>With over 15 years of culinary experience, Chef A brings creativity and passion to every dish.</p>
+                        <p>Bếp Trưởng</p>
+                        <p>Với hơn 15 năm kinh nghiệm, bếp trưởng A mang đến sự sáng tạo và đam mê cho từng món ăn.</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="team-member">
-                        <img src="https://via.placeholder.com/150" alt="Team Member">
+                        <img src="https://via.placeholder.com/150" alt="Thành viên đội ngũ">
                         <h5>Trần Thị B</h5>
-                        <p>Restaurant Manager</p>
-                        <p>B ensures every guest leaves with a smile, overseeing operations with warmth and efficiency.</p>
+                        <p>Quản Lý Nhà Hàng</p>
+                        <p>Chị B luôn đảm bảo mỗi khách hàng ra về với nụ cười, quản lý hoạt động với sự ấm áp và hiệu
+                            quả.</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="team-member">
-                        <img src="https://via.placeholder.com/150" alt="Team Member">
+                        <img src="https://via.placeholder.com/150" alt="Thành viên đội ngũ">
                         <h5>Lê Văn C</h5>
-                        <p>Pastry Chef</p>
-                        <p>C’s desserts are a sweet ending to any meal, crafted with precision and love.</p>
+                        <p>Đầu Bếp Bánh</p>
+                        <p>Những món tráng miệng của anh C là cái kết ngọt ngào mỗi bữa ăn, được làm với sự tỉ mỉ.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Map Section -->
+    <!-- Bản Đồ Vị Trí -->
     <section class="map-section">
         <div class="container">
-            <h2 class="section-title">Our Location</h2>
+            <h2 class="section-title">Địa Chỉ Của Chúng Tôi</h2>
             <div class="map-container">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3835.863084371478!2d108.25943217485829!3d15.968524865546536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3142116949840599%3A0x365b35580f52e8d5!2zxJDhuqFpIGjhu41jIEZQVCDEkMOgIE7hurVuZw!5e0!3m2!1svi!2s!4v1750065400680!5m2!1svi!2s" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3835.863084371478!2d108.25943217485829!3d15.968524865546536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3142116949840599%3A0x365b35580f52e8d5!2zxJDhuqFpIGjhu41jIEZQVCDEkMOgIE7hurVuZw!5e0!3m2!1svi!2s!4v1750065400680!5m2!1svi!2s"
+                    style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </section>
 
-    <!-- Footer -->
+    <!-- Chân Trang -->
     <footer id="contact" class="footer">
         <div class="container">
-            <h3 style="font-family: 'Playfair Display', serif; color: var(--gold);">FoodHub</h3>
-            <p class="contact-info">1 FPT | Phone: (123) 456-7890 | Email: info@foodhub.com</p>
+            <h3 style="font-family: 'Pacifico', cursive; color: var(--gold);">FoodHub</h3>
+            <p class="contact-info">1 FPT | Điện thoại: (123) 456-7890 | Email: info@foodhub.com</p>
             <div>
                 <a href="#">Facebook</a>
                 <a href="#">Instagram</a>
                 <a href="#">Twitter</a>
-                <a href="#">Reservation</a>
             </div>
-            <p class="mt-3">© 2025 FoodHub. All rights reserved.</p>
+            <p class="mt-3">© 2025 FoodHub. Bản quyền đã được bảo hộ.</p>
         </div>
     </footer>
 
@@ -275,4 +286,5 @@
     <!-- Shared JS -->
     <script src="../js/auth.js"></script>
 </body>
+
 </html>
