--- a/home-page/html/contact.html
+++ b/home-page/html/contact.html
@@ -12,140 +12,301 @@
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@400;600&display=swap"
         rel="stylesheet">
     <!-- Bootstrap Icons -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Shared CSS -->
     <link href="../css/styles.css" rel="stylesheet">
     <!-- Page-specific CSS -->
     <style>
         
+/* Hero Section */
+.hero {
+    background: linear-gradient(135deg, rgba(26, 60, 52, 0.9), rgba(10, 25, 20, 0.7)), url('https://images.unsplash.com/photo-1414235077428-338989a2e8c0') no-repeat center center/cover;
+    height: 60vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #fff;
+    position: relative;
+    overflow: hidden;
+}
 
-        .hero {
-            background: linear-gradient(rgba(26, 60, 52, 0.8), rgba(26, 60, 52, 0.8)), url('https://images.unsplash.com/photo-1414235077428-338989a2e8c0');
-            background-size: cover;
-            background-position: center;
-            height: 50vh;
-            display: flex;
-            align-items: center;
-            text-align: center;
-            color: white;
-        }
+.hero::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(circle, rgba(255, 255, 255, 0.1), transparent);
+    z-index: 1;
+}
 
-        .hero h1 {
-            font-family: 'Playfair Display', serif;
-            font-size: 3rem;
-            color: var(--gold);
-        }
+.hero .container {
+    position: relative;
+    z-index: 2;
+}
 
-        .hero p {
-            font-size: 1.1rem;
-            color: var(--light-gold);
-        }
+.hero h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 4rem;
+    font-weight: 700;
+    color: #F7E6A3;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+    margin-bottom: 1rem;
+    animation: fadeInDown 1s ease-out;
+}
 
-        .section-title {
-            font-family: 'Playfair Display', serif;
-            color: var(--dark-green);
-            font-size: 2.5rem;
-            font-weight: 700;
-            text-align: center;
-            margin-bottom: 2rem;
-        }
+.hero p {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.25rem;
+    color: #e0e0e0;
+    max-width: 600px;
+    margin: 0 auto;
+    animation: fadeInUp 1s ease-out 0.3s;
+    animation-fill-mode: both;
+}
 
-        .contact-form {
-            background-color: #f4f4f9;
-            padding: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-            display: none;
-            /* Ẩn mặc định, hiển thị khi đã đăng nhập */
-        }
+/* Contact Section */
+#contact {
+    background: #f8f9fa;
+    padding: 5rem 0;
+    position: relative;
+}
 
-        .contact-form .form-control {
-            border-radius: 6px;
-            border: 1px solid #e5e7eb;
-        }
+.section-title {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 3rem;
+    font-weight: 700;
+    color: #1A3C34;
+    text-align: center;
+    margin-bottom: 3rem;
+    position: relative;
+}
 
-        .contact-form .btn-primary {
-            background: linear-gradient(to right, #02052f, #D4A017);
-            border: none;
-            padding: 10px 20px;
-            font-weight: 600;
-            color: #F7E6A3;
-        }
+.section-title::after {
+    content: '';
+    display: block;
+    width: 80px;
+    height: 3px;
+    background: linear-gradient(to right, #D4A017, #1A3C34);
+    margin: 1rem auto;
+}
 
-        .contact-form .btn-primary:hover {
-            background: linear-gradient(to right, #D4A017, #02052f);
-            color: #F7E6A3;
-        }
+.contact-form {
+    background: #fff;
+    padding: 3rem;
+    border-radius: 12px;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+    max-width: 700px;
+    margin: 0 auto;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
 
-        .login-prompt {
-            text-align: center;
-            margin-top: 2rem;
-            color: #333;
-        }
+.contact-form:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 12px 32px rgba(0, 0, 0, 0.15);
+}
 
-        .login-prompt a {
-            color: #D4A017;
-            text-decoration: underline;
-        }
+.contact-form .form-label {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    color: #1A3C34;
+    font-size: 1rem;
+}
 
-        @media (max-width: 768px) {
-            .hero h1 {
-                font-size: 2rem;
-            }
+.contact-form .form-control {
+    border: 1px solid #e0e0e0;
+    border-radius: 8px;
+    padding: 12px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1rem;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
 
-            .hero p {
-                font-size: 0.9rem;
-            }
+.contact-form .form-control:focus {
+    border-color: #D4A017;
+    box-shadow: 0 0 8px rgba(212, 160, 23, 0.2);
+    outline: none;
+}
 
-            .section-title {
-                font-size: 2rem;
-            }
-        }
+.contact-form textarea.form-control {
+    resize: vertical;
+    min-height: 120px;
+}
+
+.contact-form .btn-primary {
+    background: linear-gradient(90deg, #1A3C34, #D4A017);
+    border: none;
+    padding: 12px 30px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 1.1rem;
+    color: #fff;
+    border-radius: 8px;
+    transition: background 0.3s ease, transform 0.2s ease;
+}
+
+.contact-form .btn-primary:hover {
+    background: linear-gradient(90deg, #D4A017, #1A3C34);
+    transform: translateY(-2px);
+}
+
+.alert {
+    border-radius: 8px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 0.95rem;
+    padding: 1rem;
+    margin-bottom: 1.5rem;
+}
+
+.login-prompt {
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.1rem;
+    color: #333;
+    margin-top: 2rem;
+}
+
+.login-prompt a {
+    color: #D4A017;
+    font-weight: 600;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.login-prompt a:hover {
+    color: #1A3C34;
+}
+
+/* Animations */
+@keyframes fadeInDown {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+/* Responsive Design */
+@media (max-width: 992px) {
+    .hero h1 {
+        font-size: 3rem;
+    }
+
+    .hero p {
+        font-size: 1.1rem;
+    }
+
+    .section-title {
+        font-size: 2.5rem;
+    }
+
+    .contact-form {
+        padding: 2rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .hero {
+        height: 50vh;
+    }
+
+    .hero h1 {
+        font-size: 2.5rem;
+    }
+
+    .hero p {
+        font-size: 1rem;
+    }
+
+    .section-title {
+        font-size: 2rem;
+    }
+
+    .contact-form {
+        padding: 1.5rem;
+    }
+
+    .contact-form .btn-primary {
+        width: 100%;
+        padding: 12px;
+    }
+}
+
+@media (max-width: 576px) {
+    .hero h1 {
+        font-size: 2rem;
+    }
+
+    .hero p {
+        font-size: 0.9rem;
+    }
+
+    .section-title {
+        font-size: 1.8rem;
+    }
+}
     </style>
 </head>
 
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top"
-        >
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="home.html" style="color: #F7E6A3;">FoodHub</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand d-flex align-items-center gap-2" href="home.html">
+                <i class="fa fa-utensils"></i>
+                <span>FoodHub</span> </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="home.html" style="color: #F7E6A3;">Home</a>
+                        <a class="nav-link active" href="home.html">Trang Chủ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="menu.html" style="color: #F7E6A3;">Menu</a>
+                        <a class="nav-link" href="menu.html">Thực Đơn</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html" style="color: #F7E6A3;">About</a>
+                        <a class="nav-link" href="about.html">Giới Thiệu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="contact.html" style="color: #F7E6A3;">Contact</a>
+                        <a class="nav-link" href="contact.html">Liên Hệ</a>
                     </li>
                     <li class="nav-item" id="auth-nav-item">
-                        <a class="nav-link btn-login" href="login.html" style="color: #F7E6A3;">Login</a>
+                        <a class="nav-link btn-login" href="login.html">Đăng Nhập</a>
                     </li>
                     <li class="nav-item d-none" id="user-nav-item">
                         <div class="user-dropdown dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" data-bs-toggle="dropdown"
-                                style="color: #F7E6A3;">
+                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" data-bs-toggle="dropdown">
                                 <span id="username-display"></span>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end">
-                                <li><a class="dropdown-item" href="#">Chỉnh sửa thông tin</a></li>
-                                <li><a class="dropdown-item" href="#">Xem đơn hàng</a></li>
-                                <li><a class="dropdown-item" href="#" onclick="logout()">Đăng xuất</a></li>
+                                <li><a class="dropdown-item" href="profile.html#profile">Chỉnh Sửa Thông Tin</a></li>
+                                <li><a class="dropdown-item" href="">Xem Đơn Hàng</a></li>
+                                <li><a class="dropdown-item" href="#" onclick="logout()">Đăng Xuất</a></li>
                             </ul>
                         </div>
                     </li>
                     <li class="nav-item d-none" id="cart-nav-item">
-                        <a class="nav-link cart-icon" href="cart.html" style="color: #F7E6A3;">
+                        <a class="nav-link cart-icon" href="cart.html">
                             <i class="bi bi-cart"></i>
                             <span class="badge" id="cart-count">0</span>
                         </a>
@@ -153,7 +314,7 @@
                 </ul>
             </div>
         </div>
-    </nav>
+        </nav>
 
     <!-- Hero Section -->
     <section class="hero">
@@ -195,13 +356,12 @@
     <footer class="footer"
         color: #F7E6A3; padding: 2rem 0; text-align: center;>
         <div class="container">
-            <h3 style="font-family: 'Playfair Display', serif; color: var(--gold);">FoodHub</h3>
+            <h3 style="font-family: 'Pacifico', cursive; color: var(--gold);">FoodHub</h3>
             <p class="contact-info">1 FPT | Phone: (123) 456-7890 | Email: info@foodhub.com</p>
             <div>
                 <a href="#" style="color: #F7E6A3; margin: 0 10px;">Facebook</a>
                 <a href="#" style="color: #F7E6A3; margin: 0 10px;">Instagram</a>
                 <a href="#" style="color: #F7E6A3; margin: 0 10px;">Twitter</a>
-                <a href="#" style="color: #F7E6A3; margin: 0 10px;">Reservation</a>
             </div>
             <p class="mt-3">© 2025 FoodHub. All rights reserved.</p>
         </div>
