--- a/home-page/html/login.html
+++ b/home-page/html/login.html
@@ -203,7 +203,7 @@
       <div id="errorMsg" class="error"></div>
       <form id="loginForm">
         <div class="form-group">
-          <label for="username">Tên đăng nhập:</label>
+          <label for="username">Email:</label>
           <input type="text" id="username" name="username" required />
         </div>
         <div class="form-group">
